<resources>
    <string name="app_name">BottomlineLocations2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addSiteDefectButton">Add a new site defect</string>
    <string name="menu_home">Home</string>
    <string name="menu_addSiteDefect">Add site defect</string>
    <string name="menu_listSiteDefects">List site defects</string>
    <string name="edit_text_name">Name station</string>
    <string name="edit_text_address">Address</string>
    <string name="edit_text_city">City</string>
    <string name="button_take_a_photo">Take a photo</string>
    <string name="edit_text_description">Description</string>
    <string name="button_get_location">Get location</string>
</resources>