<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addSiteDefect.AddSiteDefectFragment">


        <EditText
            android:id="@+id/editText_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/edit_text_name"
            app:layout_constraintBottom_toTopOf="@+id/editText_address"
            app:layout_constraintStart_toStartOf="@+id/editText_address"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/edit_text_address"
            app:layout_constraintBottom_toTopOf="@+id/editText_zipcode"
            app:layout_constraintStart_toStartOf="@+id/editText_zipcode"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <EditText
            android:id="@+id/editText_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/editText_city"
            app:layout_constraintStart_toStartOf="@+id/editText_city"
            app:layout_constraintTop_toBottomOf="@+id/editText_address"
            tools:text="Zipcode" />

        <EditText
            android:id="@+id/editText_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/edit_text_city"
            app:layout_constraintBottom_toTopOf="@+id/editText_description"
            app:layout_constraintStart_toStartOf="@+id/editText_description"
            app:layout_constraintTop_toBottomOf="@+id/editText_zipcode" />

        <Button
            android:id="@+id/button_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/button_take_a_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="299dp"
            android:layout_height="222dp"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/edit_text_description"
            app:layout_constraintBottom_toTopOf="@+id/button_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_city" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/button_get_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toEndOf="@+id/button_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>